--- a/index.Rmd
+++ b/index.Rmd
@@ -1,1 +1,10 @@
+---
+title: "PM566 Final Project"
+author: "Sam"
+output: 
+    html_document:
+        toc: TRUE
+        toc_float: TRUE
+---
 
+This is my PM566 Final Project website.
