--- a/index.Rmd
+++ b/index.Rmd
@@ -1,13 +1,13 @@
 ---
 title: "PM566 Final Project"
-author: "Sam"
+author: "Sam (Cheng-Hsiang) Lu"
 output: 
     html_document:
         toc: TRUE
         toc_float: TRUE
 ---
 
-This is my PM566 Final Project website.
+Introduction
 
 <br>
 
@@ -36,6 +36,14 @@ opts_chunk$set(
 
 
 ```
+
+
+
+
+
+
+
+
 
 ```{r}
 source("process_COVID_data.R")
